crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI008_PYI008.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI008 Unrecognized platform `linus`
 --> PYI008.pyi:3:20
  |
1 | import sys
2 |
3 | if sys.platform == "linus": ...  # Error: PYI008 Unrecognized platform `linus`
  |                    ^^^^^^^
4 |
5 | if sys.platform != "linux": ...  # OK
