crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI010_PYI010.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI010 [*] Function body must contain only `...`
 --> PYI010.pyi:6:5
  |
5 | def buzz():
6 |     print("buzz")  # ERROR PYI010
  |     ^^^^^^^^^^^^^
7 |
8 | def foo2():
help: Replace function body with `...`
  |
5 | def buzz():
  -     print("buzz")  # ERROR PYI010
6 +     ...  # ERROR PYI010
7 |
  |

PYI010 [*] Function body must contain only `...`
  --> PYI010.pyi:9:5
 8 | def foo2():
 9 |     123  # ERROR PYI010
   |     ^^^
10 |
11 | def bizz():
help: Replace function body with `...`
   |
8  | def foo2():
   -     123  # ERROR PYI010
9  +     ...  # ERROR PYI010
10 |
   |

PYI010 [*] Function body must contain only `...`
  --> PYI010.pyi:12:5
   |
11 | def bizz():
12 |     x = 123  # ERROR PYI010
   |     ^^^^^^^
13 |
14 | def foo3():
help: Replace function body with `...`
   |
11 | def bizz():
   -     x = 123  # ERROR PYI010
12 +     ...  # ERROR PYI010
13 |
   |
